--- a/src/compression/CMakeLists.txt
+++ b/src/compression/CMakeLists.txt
@@ -7,8 +7,8 @@ INCLUDE_DIRECTORIES(${SLC_INCLUDE})
 
 if (USE_SL)
     MESSAGE(STATUS "SLCSL is Enabled")
-    SET(SLC_G SevenZCompression.cpp)
+    SET(SLC_G Compression.cpp 7z/SevenZCompression.cpp)
 else()
     MESSAGE(STATUS "SLCSL is Disabled")
-    ADD_LIBRARY(slc_compression ICompression.cpp Compression.cpp SevenZCompression.cpp)
+    ADD_LIBRARY(slc_compression Compression.cpp 7z/SevenZCompression.cpp)
 endif(USE_SL)
