--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -7,8 +7,8 @@ INCLUDE_DIRECTORIES(${SLC_INCLUDE})
 
 if (USE_SL)
     MESSAGE(STATUS "SLCSL is Enabled")
-    SET(SLC_G EString.cpp Stopwatch.cpp EDateTime.cpp)
+    SET(SLC_G EString.cpp Stopwatch.cpp EDateTime.cpp Platform.cpp)
 else()
     MESSAGE(STATUS "SLCSL is Disabled")
-    ADD_LIBRARY(slc_core EString.cpp Stopwatch.cpp EDateTime.cpp)
+    ADD_LIBRARY(slc_core EString.cpp Stopwatch.cpp EDateTime.cpp Platform.cpp)
 endif(USE_SL)
