修复EString的Bug，增加匹配等方法

--- a/src/configure/CMakeLists.txt
+++ b/src/configure/CMakeLists.txt
@@ -10,5 +10,5 @@ if (USE_SL)
     SET(SLC_G IniConfigure.cpp)
 else()
     MESSAGE(STATUS "SLCSL is Disabled")
-    ADD_LIBRARY(slc_configuration IniConfigure.cpp)
+    ADD_LIBRARY(slc_configure IniConfigure.cpp)
 endif(USE_SL)
