--- a/src/cv/CMakeLists.txt
+++ b/src/cv/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required(VERSION 3.0)
-
 # 括号里面填你的工程名
 PROJECT(SLCCV)
 
 INCLUDE_DIRECTORIES(${SLC_INCLUDE})
+
+set(OpenCV_DIR D:/Env/opencv/mingw/)
+
+FIND_PACKAGE(OpenCV REQUIRED)
 
 if (USE_SL)
     MESSAGE(STATUS "SLCSL is Enabled")
@@ -12,5 +14,5 @@ else()
     MESSAGE(STATUS "SLCSL is Disabled")
     SET(SLC_L videos/VideoCapture.cpp)
     ADD_LIBRARY(slc_cv ${SLC_L})
-    TARGET_LINK_LIBRARIES(slc_cv slc_core slc_logger)
+    TARGET_LINK_LIBRARIES(slc_cv slc_core slc_logger slc_configure ${OpenCV_LIBS})
 endif(USE_SL)
