提交并行组件，修复EString的Bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ ADD_SUBDIRECTORY(src/cv)
 ADD_SUBDIRECTORY(src/configure)
 ADD_SUBDIRECTORY(src/compression)
 ADD_SUBDIRECTORY(src/log)
+ADD_SUBDIRECTORY(src/parallel)
 
 ADD_LIBRARY(slc ${SLC_G})
 ADD_EXECUTABLE(slce src/slc.cpp)
-TARGET_LINK_LIBRARIES(slce slc_logger slc_core slc_cv slc_configure)
+TARGET_LINK_LIBRARIES(slce slc_logger slc_core slc_cv slc_configure slc_parallel)
