--- a/src/parallel/CMakeLists.txt
+++ b/src/parallel/CMakeLists.txt
@@ -1,16 +1,13 @@
-cmake_minimum_required(VERSION 3.0)
-
 # 括号里面填你的工程名
-PROJECT(SLCLOGGER)
+PROJECT(SLCParallel)
 
 INCLUDE_DIRECTORIES(${SLC_INCLUDE})
 
+MESSAGE(STATUS "Begin to build slc_parallel")
 if (USE_SL)
-    MESSAGE(STATUS "SLCSL is Enabled")
-    SET(SLC_G Logger.cpp)
+    SET(SLC_G ParallelMath.cpp)
 else()
-    MESSAGE(STATUS "SLCSL is Disabled")
-    SET(SLC_L Logger.cpp)
-    ADD_LIBRARY(slc_logger ${SLC_L})
-    TARGET_LINK_LIBRARIES(slc_logger slc_core)
+    SET(SLC_L ParallelMath.cpp)
+    ADD_LIBRARY(slc_parallel ${SLC_L})
+    TARGET_LINK_LIBRARIES(slc_parallel slc_core slc_logger slc_configure)
 endif(USE_SL)
