--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,11 @@ SET(SLC_G src/slc.cpp)
 
 ADD_SUBDIRECTORY(src/core)
 ADD_SUBDIRECTORY(src/cv)
-ADD_SUBDIRECTORY(src/configure)
 ADD_SUBDIRECTORY(src/compression)
 ADD_SUBDIRECTORY(src/log)
 ADD_SUBDIRECTORY(src/parallel)
+ADD_SUBDIRECTORY(src/algorithm)
 
 ADD_LIBRARY(slc ${SLC_G})
 ADD_EXECUTABLE(slce src/slc.cpp)
-TARGET_LINK_LIBRARIES(slce slc_logger slc_core slc_cv slc_configure slc_parallel)
+TARGET_LINK_LIBRARIES(slce slc_logger slc_core slc_cv slc_parallel)
