--- a/src/cv/CMakeLists.txt
+++ b/src/cv/CMakeLists.txt
@@ -14,5 +14,5 @@ else()
     MESSAGE(STATUS "SLCSL is Disabled")
     SET(SLC_L videos/VideoCapture.cpp)
     ADD_LIBRARY(slc_cv ${SLC_L})
-    TARGET_LINK_LIBRARIES(slc_cv slc_core slc_logger slc_configure ${OpenCV_LIBS})
+    TARGET_LINK_LIBRARIES(slc_cv slc_core slc_logger ${OpenCV_LIBS})
 endif(USE_SL)
