--- a/src/parallel/CMakeLists.txt
+++ b/src/parallel/CMakeLists.txt
@@ -9,5 +9,5 @@ if (USE_SL)
 else()
     SET(SLC_L ParallelMath.cpp)
     ADD_LIBRARY(slc_parallel ${SLC_L})
-    TARGET_LINK_LIBRARIES(slc_parallel slc_core slc_logger slc_configure)
+    TARGET_LINK_LIBRARIES(slc_parallel slc_core slc_logger)
 endif(USE_SL)
