--- a/src/algorithm/CMakeLists.txt
+++ b/src/algorithm/CMakeLists.txt
@@ -5,9 +5,9 @@ INCLUDE_DIRECTORIES(${SLC_INCLUDE})
 
 MESSAGE(STATUS "Begin to build slc_parallel")
 if (USE_SL)
-    SET(SLC_G AdjacencyList.cpp)
+    SET(SLC_G AdjacencyList.cpp SeqList.cpp)
 else()
-    SET(SLC_L AdjacencyList.cpp)
+    SET(SLC_L AdjacencyList.cpp SeqList.cpp)
     ADD_LIBRARY(slc_algorithm ${SLC_L})
     TARGET_LINK_LIBRARIES(slc_algorithm slc_core slc_logger)
 endif(USE_SL)
