添加数据库支持

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,11 @@ ADD_SUBDIRECTORY(src/core)
 ADD_SUBDIRECTORY(src/cv)
 ADD_SUBDIRECTORY(src/compression)
 ADD_SUBDIRECTORY(src/log)
+ADD_SUBDIRECTORY(src/dao)
 ADD_SUBDIRECTORY(src/parallel)
 ADD_SUBDIRECTORY(src/algorithm)
+ADD_SUBDIRECTORY(src/io)
 
 # ADD_LIBRARY(slc ${SLC_G})
 ADD_EXECUTABLE(slce src/slc.cpp)
-TARGET_LINK_LIBRARIES(slce slc_logger slc_core slc_cv slc_algorithm)
+TARGET_LINK_LIBRARIES(slce slc_logger slc_core slc_cv slc_io slc_dao)
