--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -1,50 +1,14 @@
-# add sources of the "sqlite3" static library
-add_library(slc_sqlite
-        sqlite/sqlite3.c
-        ../../include/dao/sqlite/sqlite3.h
-)
+# 括号里面填你的工程名
+PROJECT(SLCIO)
 
-#target_include_directories(sqlite3
-#  PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-#  PUBLIC $<INSTALL_INTERFACE:include/>)
-#
-#if (SQLITE_ENABLE_COLUMN_METADATA)
-#    # Enable the use of SQLite column metadata method
-#    # Require that the sqlite3 library is also compiled with this flag:
-#    target_compile_definitions(sqlite3 PUBLIC SQLITE_ENABLE_COLUMN_METADATA)
-#endif (SQLITE_ENABLE_COLUMN_METADATA)
-#
-#if (SQLITE_ENABLE_JSON1)
-#    # Enable JSON1 extension when building sqlite3
-#    # See more here: https://www.sqlite.org/json1.html
-#    target_compile_definitions(sqlite3 PUBLIC SQLITE_ENABLE_JSON1)
-#endif (SQLITE_ENABLE_JSON1)
-#
-#if(SQLITE_ENABLE_RTREE)
-#    # Enable RTree extension when building sqlite3
-#    # See more here: https://sqlite.org/rtree.html
-#    target_compile_definitions(sqlite3 PUBLIC SQLITE_ENABLE_RTREE)
-#endif (SQLITE_ENABLE_RTREE)
-#
-#if (UNIX AND (CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang"))
-#    set_target_properties(sqlite3 PROPERTIES COMPILE_FLAGS "-fPIC")
-#endif (UNIX AND (CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang"))
-#
-#if (UNIX AND CMAKE_COMPILER_IS_GNUCXX)
-#    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 7.0)
-#        target_compile_options(sqlite3 PRIVATE "-Wimplicit-fallthrough=0")
-#    endif()
-#    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
-#        target_compile_options(sqlite3 PRIVATE "-Wno-cast-function-type")
-#    endif()
-#endif()
+INCLUDE_DIRECTORIES(${SLC_INCLUDE})
 
-# Allow the library to be installed via "make install" and found with "find_package"
-
-#include(GNUInstallDirs)
-#install(TARGETS sqlite3
-#        EXPORT ${PROJECT_NAME}Targets
-#        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-#        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-#        COMPONENT libraries)
-#install(FILES ../../include/dao/sqlite/sqlite3.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT headers)
+if (USE_SL)
+    MESSAGE(STATUS "SLCSL is Enabled")
+    SET(SLC_G File.cpp)
+else()
+    MESSAGE(STATUS "SLCSL is Disabled")
+    SET(SLC_L File.cpp)
+    ADD_LIBRARY(slc_io ${SLC_L})
+    TARGET_LINK_LIBRARIES(slc_io slc_core slc_logger)
+endif(USE_SL)
