--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -5,10 +5,10 @@ INCLUDE_DIRECTORIES(${SLC_INCLUDE})
 
 if (USE_SL)
     MESSAGE(STATUS "SLCSL is Enabled")
-    SET(SLC_G File.cpp)
+    SET(SLC_G File.cpp Directory.cpp)
 else()
     MESSAGE(STATUS "SLCSL is Disabled")
-    SET(SLC_L File.cpp)
+    SET(SLC_L File.cpp Directory.cpp)
     ADD_LIBRARY(slc_io ${SLC_L})
     TARGET_LINK_LIBRARIES(slc_io slc_core slc_logger)
 endif(USE_SL)
