提交矩阵操作和视频操作

--- a/src/cv/CMakeLists.txt
+++ b/src/cv/CMakeLists.txt
@@ -9,10 +9,10 @@ FIND_PACKAGE(OpenCV REQUIRED)
 
 if (USE_SL)
     MESSAGE(STATUS "SLCSL is Enabled")
-    SET(SLC_G videos/VideoCapture.cpp)
+    SET(SLC_G common/MatrixOperator.cpp videos/VideoCapture.cpp)
 else()
     MESSAGE(STATUS "SLCSL is Disabled")
-    SET(SLC_L videos/VideoCapture.cpp)
+    SET(SLC_L common/MatrixOperator.cpp videos/VideoCapture.cpp)
     ADD_LIBRARY(slc_cv ${SLC_L})
     TARGET_LINK_LIBRARIES(slc_cv slc_core slc_logger ${OpenCV_LIBS})
 endif(USE_SL)
