--- a/src/cv/CMakeLists.txt
+++ b/src/cv/CMakeLists.txt
@@ -2,17 +2,17 @@
 PROJECT(SLCCV)
 
 INCLUDE_DIRECTORIES(${SLC_INCLUDE})
-
+# D:\Env\opencv\mingw
 set(OpenCV_DIR D:/Env/opencv/mingw/)
 
 FIND_PACKAGE(OpenCV REQUIRED)
 
 if (USE_SL)
     MESSAGE(STATUS "SLCSL is Enabled")
-    SET(SLC_G common/MatrixOperator.cpp videos/VideoCapture.cpp)
+    SET(SLC_G EMat.cpp videos/VideoCapture.cpp)
 else()
     MESSAGE(STATUS "SLCSL is Disabled")
-    SET(SLC_L common/MatrixOperator.cpp videos/VideoCapture.cpp)
+    SET(SLC_L EMat.cpp videos/VideoCapture.cpp)
     ADD_LIBRARY(slc_cv ${SLC_L})
     TARGET_LINK_LIBRARIES(slc_cv slc_core slc_logger ${OpenCV_LIBS})
 endif(USE_SL)
