--- a/src/accelerate/CMakeLists.txt
+++ b/src/accelerate/CMakeLists.txt
@@ -7,6 +7,7 @@ MESSAGE(STATUS "Begin to build slc_accelerator")
 
 option (USE_CUDA
         "Build with cuda" OFF)
-if (USE_CUDA EQUAL ON)
+
+if (USE_CUDA)
     ADD_SUBDIRECTORY(src/accelerate/cuda)
 endif (USE_CUDA)
